<resources>
    <string name="app_name">Serving Size Calculator</string>
    <string name="select_a_pot_to_use">Select a pot to use:</string>
    <string name="add_pot">ADD POT</string>
    <string name="pot_name">Pot Name:</string>
    <string name="pot_weight_g">Pot Weight (g):</string>
    <string name="cacncel">CACNCEL</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="pot">Pot</string>
    <string name="weight_empty_g">Weight Empty (g)</string>
    <string name="weight_with_food_g">Weight with food (g)</string>
    <string name="weight_of_food_g">Weight of food (g)</string>
    <string name="servings"># Servings</string>
    <string name="serving_weight">Serving Weight</string>
    <string name="optional_4_1_edit_pot_4_3_error_checking_input">Optional: 4.1 Edit Pot; 4.3 Error Checking Input</string>
</resources>
