<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haoyup.potandweight.AddPotActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/messageName"
                android:layout_toLeftOf="@+id/messageName"
                android:layout_toStartOf="@+id/messageName"
                android:text="@string/pot_name" />

            <EditText
                android:id="@+id/messageName"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/messageWeight"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:ems="10"
                android:hint="Pot name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/messageWeight"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/messageWeight"
                android:text="@string/pot_weight_g" />

            <EditText
                android:id="@+id/messageWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/btnOK"
                android:layout_alignEnd="@+id/messageName"
                android:layout_alignRight="@+id/messageName"
                android:layout_marginBottom="58dp"
                android:layout_toEndOf="@+id/textView3"
                android:layout_toRightOf="@+id/textView3"
                android:ems="10"
                android:hint="Pot weight (g)"
                android:inputType="textPersonName" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="176dp"
        android:text="@string/cacncel" />

    <Button
        android:id="@+id/btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnCancel"
        android:layout_alignBottom="@+id/btnCancel"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_toLeftOf="@+id/btnCancel"
        android:layout_toStartOf="@+id/btnCancel"
        android:text="@string/ok" />

</RelativeLayout>
