<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.haoyup.potandweight.CalculateAcitivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="115dp"
        android:layout_marginEnd="84dp"
        android:layout_marginRight="84dp"
        android:text="@string/back" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="61dp"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_toLeftOf="@+id/btnBack"
                android:layout_toStartOf="@+id/btnBack"
                android:text="@string/pot" />

            <TextView
                android:id="@+id/potName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/tableLayout"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_below="@+id/textView2"
                android:layout_toLeftOf="@+id/potName"
                android:layout_toStartOf="@+id/potName"
                android:text="@string/weight_empty_g" />

            <TextView
                android:id="@+id/weightEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/textView2"
                android:layout_toEndOf="@+id/textView6"
                android:layout_toRightOf="@+id/textView6" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_below="@+id/textView6"
                android:layout_toLeftOf="@+id/weightEmpty"
                android:layout_toStartOf="@+id/weightEmpty"
                android:text="@string/weight_with_food_g" />

            <EditText
                android:id="@+id/weightWithFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView8"
                android:layout_below="@+id/weightEmpty"
                android:layout_toEndOf="@+id/textView8"
                android:layout_toRightOf="@+id/textView8"
                android:ems="10"
                android:hint="Weight with food"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_below="@+id/textView8"
                android:layout_toLeftOf="@+id/weightWithFood"
                android:layout_toStartOf="@+id/weightWithFood"
                android:text="@string/weight_of_food_g" />

            <TextView
                android:id="@+id/weightOfFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/weightWithFood"
                android:layout_toEndOf="@+id/textView9"
                android:layout_toRightOf="@+id/textView9" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_below="@+id/textView9"
                android:layout_toLeftOf="@+id/weightOfFood"
                android:layout_toStartOf="@+id/weightOfFood"
                android:text="@string/servings" />

            <EditText
                android:id="@+id/numServing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView11"
                android:layout_below="@+id/weightOfFood"
                android:layout_toEndOf="@+id/textView11"
                android:layout_toRightOf="@+id/textView11"
                android:ems="10"
                android:hint="Enter a number"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tableLayout"
                android:layout_alignStart="@+id/tableLayout"
                android:layout_below="@+id/textView11"
                android:layout_toLeftOf="@+id/numServing"
                android:layout_toStartOf="@+id/numServing"
                android:text="@string/serving_weight" />

            <TextView
                android:id="@+id/servingWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView12"
                android:layout_alignBottom="@+id/textView12"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/textView12"
                android:layout_toRightOf="@+id/textView12" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
